# rocketcss

./: .gitignore  .prettierignore  AGENTS.md  CSSNANO_TEST_PROGRESS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/allocator/: Cargo.toml
crates/allocator/src/: allocator_api.rs  atom.rs  bit_vec.rs  boxed.rs  ghost_cell.rs  hash_map.rs  hash_set.rs  lib.rs  prelude.rs  raw_vec.rs  reference.rs  small_bit_vec.rs  string_pool.rs  vec.rs
crates/allocator/src/wtf8/: mod.rs  not_quite_std.rs
crates/ast/: Cargo.toml
crates/ast/src/: color.rs  common.rs  css_rule.rs  length.rs  lib.rs  media.rs  mod.rs  prelude.rs  properties.rs  rules.rs  selector.rs  span.rs  token.rs  tombstone.rs  values.rs  visit_context.rs
crates/ast/src/rules/: animation.rs  at_rule.rs  background.rs  border.rs  container.rs  font.rs  keyframes.rs  layout.rs  mod.rs  page.rs  property.rs  shape.rs  stylesheet.rs  text.rs  transform.rs  ui.rs  view_transition.rs
crates/ast/src/values/: alignment.rs  animation.rs  border.rs  box_model.rs  container.rs  filter.rs  flex.rs  font.rs  grid.rs  image.rs  list.rs  mask.rs  mod.rs  property.rs  shape.rs  svg.rs  text.rs  transform.rs  ui.rs  view_transition.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: color.rs  css_rule.rs  length.rs  lib.rs  media.rs  prelude.rs  printer.rs  properties.rs  rules.rs  selector.rs  token.rs  values.rs
crates/codegen/src/values/: font.rs
crates/codegen/tests/: to_css.rs  trait_coverage.rs  upstream.rs
crates/codegen/tests/upstream/: README.md
crates/macros/: Cargo.toml
crates/macros/src/: generated_visit_aliases.rs  generated_visitor_methods.rs  lib.rs
crates/minify/: Cargo.toml  README.md
crates/minify/src/: color.rs  context.rs  css_rule.rs  length.rs  lib.rs  media.rs  options.rs  prelude.rs  properties.rs  rules.rs  selector.rs  token.rs  values.rs
crates/minify/src/rules/: at_rule.rs  color.rs  declaration_block.rs  keyframes.rs  misc.rs  mod.rs  property.rs  stylesheet.rs
crates/minify/src/rules/stylesheet/: adjacent.rs  calc.rs  declaration_block.rs  function.rs  gradient.rs  mod.rs  transform.rs
crates/minify/src/tests/: animations.rs  box_model.rs  colors.rs  custom_properties.rs  fonts.rs  options_plugin.rs  selectors.rs  values.rs
crates/minify/src/values/: animation.rs  font.rs  mod.rs
crates/minify/tests/: ratio.rs
crates/nano/: Cargo.toml  README.md
crates/nano/src/: context.rs  length.rs  lib.rs  options.rs
crates/nano/src/rules/: keyframes.rs
crates/nano/src/rules/stylesheet/: adjacent.rs  declaration_block.rs  (+4 more)
crates/nano/src/tests/: animations.rs  at_rules.rs  box_model.rs  calc_units.rs  columns.rs  declarations.rs  fonts.rs  mod.rs  options_plugin.rs  prefixes.rs  rule_merge.rs  selectors.rs  transforms.rs  values.rs
crates/nano/tests/: ratio.rs
crates/parser/: Cargo.toml
crates/parser/src/: escape.rs  lib.rs  parser.rs  prelude.rs  stylesheet.rs  tokenizer.rs  traits.rs
crates/parser/src/parser/: color.rs  css_rule.rs  length.rs  media.rs  mod.rs  properties.rs  rules.rs  selector.rs  stylesheet.rs  token.rs  traits.rs  values.rs
crates/parser/tests/: parser.rs  tokenizer.rs  upstream.rs
crates/parser/tests/upstream/: README.md  corpus.json
crates/visitor/: Cargo.toml
crates/visitor/src/: lib.rs  plugin.rs  prelude.rs
crates/visitor/tests/: plugins.rs  visitor.rs
tasks/ast_tools/: Cargo.toml
tasks/ast_tools/src/: main.rs
tasks/benchmark/: Cargo.toml  README.md
tasks/benchmark/benches/: codegen.rs  declaration_block.rs  deduplicate.rs  minify.rs  parser.rs  pipeline.rs  string_pool.rs  tokenizer.rs  visitor.rs
tasks/benchmark/scripts/: cssnano-worker.cjs  cssnano-worker.mjs  format-minify-results.mjs  format-minify-results.test.mjs
tasks/benchmark/scripts/tailwind/: .gitignore  README.md  package.json  pnpm-lock.yaml  postcss.config.mjs  rspack.config.ts  tsconfig.json
tasks/benchmark/src/: lib.rs
tests/: .gitignore  Cargo.toml  README.md
tests/fixtures/codegen/basic/: input.css
tests/fixtures/codegen/media/: output.css
tests/fixtures/minify/: README.md
tests/fixtures/minify-dynamic/: README.md
tests/fixtures/minify-dynamic/cssnano/: postcss-colormin__test__index.json  postcss-convert-values__test__index.json  postcss-discard-comments__test__index.json  postcss-discard-duplicates__test__index.json  postcss-discard-empty__test__index.json  postcss-discard-unused__test__index.json  postcss-discard-unused__test__namespace.json  postcss-merge-idents__test__index.json  postcss-merge-longhand__test__borders.json  postcss-merge-longhand__test__boxBase.json  postcss-merge-longhand__test__columns.json  postcss-merge-rules__test__index.json  postcss-minify-font-values__test__index.json  postcss-minify-gradients__test__index.json  postcss-minify-params__test__index.json  postcss-minify-selectors__test__index.json  postcss-normalize-charset__test__index.json  postcss-normalize-display-values__test__index.json  postcss-normalize-positions__test__index.json  postcss-normalize-repeat-style__test__index.json  postcss-normalize-string__test__index.json  postcss-normalize-timing-functions__test__index.json  postcss-normalize-unicode__test__index.json  postcss-normalize-url__test__index.json  postcss-normalize-whitespace__test__index.json  postcss-ordered-values__test__index.json  postcss-reduce-idents__test__index.json  postcss-reduce-initial__test__index.json  postcss-reduce-transforms__test__index.json  postcss-svgo__test__index.json  postcss-unique-selectors__test__index.json  postcss-zindex__test__index.json
tests/fixtures/minify/cssnano/: corpus.json
tests/fixtures/visitor/rename-class/: input.css  output.css
tests/scripts/: minify-with-cssnano.mjs
tests/src/: codegen.rs  lib.rs  minify.rs  minify_dynamic.rs  parser.rs  visitor.rs
tests/src/cross_rule_declaration_merging/: declarations.rs  mod.rs  nesting.rs  real_world.rs  state_machine.rs
tests/src/cross_rule_declaration_merging/review_findings/: ast_ownership.rs  discovery_and_segments.rs  mod.rs  semantics.rs  state_machine.rs
(+277 files in other folders)
