[workspace]
members  = ["crates/*", "tasks/ast_tools", "tasks/benchmark", "tests"]
resolver = "3"

[workspace.package]
description = ""
homepage    = "https://github.com/intellild/rs-css"
keywords    = ["CSS"]
license     = "Apache-2.0"
repository  = "https://github.com/intellild/rs-css"

[workspace.dependencies]
allocator-api2   = "=0.2.21"
bitflags         = "2.13.0"
bumpalo          = "3.20.3"
cssparser        = "0.37.0"
either           = "1.16.0"
hashbrown        = "0.17.1"
indexmap         = "2.14.0"
insta            = "1.48.0"
miette           = "7.6.0"
num-bigint       = "0.4.6"
oxc_index        = { version = "5.0.0", features = ["nonmax"] }
rayon            = "1.12.0"
rustc-hash       = "2.1.2"
seq-macro        = "0.3.6"
similar          = "3.1.1"
smallvec         = "1.15.1"
smartstring      = "1.0.1"
stacker          = "0.1.24"
tracing          = "0.1.44"
unicode-id-start = "1.4.0"

# Ast tool
convert_case = "0.11.0"
phf          = "0.14.0"
prettyplease = "0.2.37"
proc-macro2  = "1.0.106"
quote        = "1.0.46"
syn          = { version = "2.0.118", default-features = false }

# Workspace
rs_css_allocator = { version = "0.1.0", path = "crates/allocator" }
rs_css_ast       = { version = "0.1.0", path = "crates/ast" }
rs_css_codegen   = { version = "0.1.0", path = "crates/codegen" }
rs_css_parser    = { version = "0.1.0", path = "crates/parser" }
rs_css_visitor   = { version = "0.1.0", path = "crates/visitor" }

# Dev
colored          = "3.1.1"
criterion        = { package = "codspeed-criterion-compat", version = "5.0.0" }
css-module-lexer = "0.1.0"
jwalk            = "0.8.1"
lightningcss     = { version = "=1.0.0-alpha.71", default-features = false }
mimalloc         = "0.1.52"
oxc              = { version = "0.137.0", features = ["ast_visit", "semantic"] }
oxc_allocator    = "0.137.0"
pico-args        = "0.5.0"
rstest           = "0.26.1"
saphyr           = "0.0.6"
serde_json       = "1.0"
stylo            = { version = "0.19.0", default-features = false, features = ["servo"] }
tracy-client     = { version = "=0.18.1", features = ["enable", "sampling", "demangle", "system-tracing"] }
url              = "2.5.4"

[profile.bench]
codegen-units = 1
debug         = true
lto           = "fat"
opt-level     = 3
strip         = "none"
