[workspace]
members  = ["crates/*", "tasks/ast_tools", "tasks/benchmark", "tests"]
resolver = "3"

[workspace.package]
description = ""
homepage    = "https://github.com/intellild/rocketcss"
keywords    = ["CSS"]
license     = "Apache-2.0"
repository  = "https://github.com/intellild/rocketcss"

[workspace.dependencies]
allocator-api2 = "=0.2.21"
bitflags       = "2.13.0"
bumpalo        = "3.20.3"
cssparser      = "0.37.0"
hashbrown      = "0.17.1"
itoa           = "1.0.17"
rustc-hash     = "2.1.2"
zmij           = "1.0.21"

# Ast tool
convert_case     = "0.11.0"
prettyplease     = "0.2.37"
proc-macro-crate = "3.5.0"
proc-macro2      = "1.0.106"
quote            = "1.0.46"
syn              = { version = "2.0.118", default-features = false }

# Workspace
rocketcss_allocator = { version = "0.1.0", path = "crates/allocator" }
rocketcss_ast       = { version = "0.1.0", path = "crates/ast" }
rocketcss_codegen   = { version = "0.1.0", path = "crates/codegen" }
rocketcss_macros    = { version = "0.1.0", path = "crates/macros" }
rocketcss_minify    = { version = "0.1.0", path = "crates/minify" }
rocketcss_parser    = { version = "0.1.0", path = "crates/parser" }
rocketcss_visitor   = { version = "0.1.0", path = "crates/visitor" }

# Dev
css-module-lexer = "0.1.0"
divan            = { package = "codspeed-divan-compat", version = "5.0.1" }
lightningcss     = { git = "https://github.com/parcel-bundler/lightningcss.git", rev = "171fa5d4e804e7d25b583ee79c268f2c80723f73", default-features = false }
mimalloc         = "0.1.52"
serde_json       = "1.0"
stylo            = { version = "0.19.0", default-features = false, features = ["servo"] }
url              = "2.5.4"

[profile.bench]
codegen-units = 1
debug         = true
lto           = "fat"
opt-level     = 3
strip         = "none"
