[package]
autolib = false
edition = "2024"
name = "rocketcss_tests"
publish = false
version = "0.0.0"

[[test]]
name = "fixtures"
path = "src/lib.rs"

[dev-dependencies]
rocketcss_allocator = { workspace = true }
rocketcss_ast = { workspace = true }
rocketcss_codegen = { workspace = true }
rocketcss_minify = { workspace = true }
rocketcss_parser = { workspace = true }
rocketcss_visitor = { workspace = true }
serde_json = { workspace = true }
