[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rocketcss_allocator"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
allocator-api2 = { workspace = true }
bumpalo        = { workspace = true, features = ["allocator-api2"] }
hashbrown      = { workspace = true }
rustc-hash     = { workspace = true }
