[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rs_css_ast"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
rs_css_allocator = { workspace = true }
smallbitvec      = { workspace = true }
smallvec         = { workspace = true }
