[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rocketcss_ast"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
bitflags            = { workspace = true }
rocketcss_allocator = { workspace = true }
rocketcss_macros    = { workspace = true }
