[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rs_css_codegen"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
cssparser        = { workspace = true }
rs_css_allocator = { workspace = true }
rs_css_ast       = { workspace = true }

[dev-dependencies]
lightningcss  = { workspace = true }
rs_css_parser = { workspace = true }
serde_json    = { workspace = true }
