[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rocketcss_codegen"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
cssparser        = { workspace = true }
itoa             = { workspace = true }
rocketcss_allocator = { workspace = true }
rocketcss_ast       = { workspace = true }
zmij                = { workspace = true }

[dev-dependencies]
lightningcss  = { workspace = true }
rocketcss_parser = { workspace = true }
serde_json    = { workspace = true }
