[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rocketcss_macros"
repository.workspace  = true
version               = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["derive", "full", "parsing", "printing", "proc-macro"] }
