[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rocketcss_macros"
repository.workspace  = true
version               = "0.1.0"

[lib]
proc-macro = true

[dependencies]
convert_case     = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro2      = { workspace = true }
quote            = { workspace = true }
syn              = { workspace = true, features = ["clone-impls", "derive", "full", "parsing", "printing", "proc-macro"] }
