[package]
edition = "2024"
name    = "rocketcss_minify"
version = "0.1.0"

[dependencies]
bitflags            = { workspace = true }
rocketcss_allocator = { workspace = true }
rocketcss_ast       = { workspace = true }
rocketcss_visitor   = { workspace = true }
rustc-hash          = { workspace = true }
zmij                = { workspace = true }

[dev-dependencies]
rocketcss_codegen = { workspace = true }
rocketcss_parser  = { workspace = true }
