[package]
edition = "2024"
name    = "rocketcss_nano"
version = "0.1.0"

[dependencies]
ahash               = { workspace = true }
bitflags            = { workspace = true }
rocketcss_allocator = { workspace = true }
rocketcss_ast       = { workspace = true }
rocketcss_visitor   = { workspace = true }
zmij                = { workspace = true }

[dev-dependencies]
rocketcss_codegen = { workspace = true }
rocketcss_parser  = { workspace = true }
