[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license               = "MPL-2.0"
name                  = "rs_css_parser"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
rs_css_allocator = { workspace = true }
rs_css_ast = { workspace = true }
