[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license               = "MPL-2.0"
name                  = "rocketcss_parser"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
rocketcss_allocator = { workspace = true }
rocketcss_ast       = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
