[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "rocketcss_visitor"
repository.workspace  = true
version               = "0.1.0"

[dependencies]
rocketcss_allocator = { workspace = true }
rocketcss_ast       = { workspace = true }

[dev-dependencies]
rocketcss_parser = { workspace = true }
