[package]
edition = "2024"
name = "rs_css_ast_tools"
publish = false
version = "0.0.0"

[dependencies]
convert_case = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["clone-impls", "full", "parsing", "printing"] }
