[package]
edition = "2024"
name    = "benchmark"
publish = false
version = "0.1.0"

[dev-dependencies]
criterion        = { workspace = true }
css-module-lexer = { workspace = true }
lightningcss     = { workspace = true }
mimalloc         = { workspace = true }
rs_css_allocator = { workspace = true }
rs_css_codegen   = { workspace = true }
rs_css_parser    = { workspace = true }
stylo            = { workspace = true }
url              = { workspace = true }

[[bench]]
harness = false
name    = "tokenizer"

[[bench]]
harness = false
name    = "parser"

[[bench]]
harness = false
name    = "codegen"
