[package]
edition = "2024"
name    = "rocketcss_benchmark"
publish = false
version = "0.1.0"

[dev-dependencies]
css-module-lexer    = { workspace = true }
divan               = { workspace = true }
hashbrown           = { workspace = true }
lightningcss        = { workspace = true }
mimalloc            = { workspace = true }
rocketcss_allocator = { workspace = true }
rocketcss_codegen   = { workspace = true }
rocketcss_nano      = { workspace = true }
rocketcss_parser    = { workspace = true }
rustc-hash          = { workspace = true }
stylo               = { workspace = true }
url                 = { workspace = true }

[[bench]]
harness = false
name    = "tokenizer"

[[bench]]
harness = false
name    = "parser"

[[bench]]
harness = false
name    = "codegen"

[[bench]]
harness = false
name    = "minify"

[[bench]]
harness = false
name    = "deduplicate"

[[bench]]
harness = false
name    = "pipeline"
